<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8DAE1"
    android:onClick="monocromatico"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/rbGrp"
        android:layout_width="wrap_content"
        android:layout_height="305dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbRed"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:buttonTint="#25283D"
            android:checked="true"
            android:text="@string/rojo"
            android:textColor="#000000"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rbOrange"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:buttonTint="#25283D"
            android:text="@string/naranja"
            android:textColor="#000000"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rbYellow"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:buttonTint="#25283D"
            android:text="@string/amarillo"
            android:textColor="#000000"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rbGreen"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:buttonTint="#25283D"
            android:text="@string/verde"
            android:textColor="#000000"
            android:textSize="14sp"
            tools:ignore="TextContrastCheck" />

        <RadioButton
            android:id="@+id/rbBlue"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:buttonTint="#25283D"
            android:text="@string/azul"
            android:textColor="#000000"
            android:textSize="14sp"
            tools:ignore="TextContrastCheck" />

        <RadioButton
            android:id="@+id/rbPurple"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:buttonTint="#25283D"
            android:text="@string/morado"
            android:textColor="#000000"
            android:textSize="14sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/txtMain"
        android:layout_width="200dp"
        android:layout_height="225dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:background="#fc0303"
        android:gravity="center"
        android:text="@string/defaultHex"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rbGrp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imgbtnMonochrom"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/monochrom"
        android:onClick="monocromatico"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMain"
        app:srcCompat="@drawable/schemesmonobtn"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/imgbtnAnalog"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="61dp"
        android:contentDescription="@string/analog"
        android:onClick="analogo"
        app:layout_constraintEnd_toStartOf="@+id/imgbtnComp"
        app:layout_constraintStart_toEndOf="@+id/imgbtnMonochrom"
        app:layout_constraintTop_toBottomOf="@+id/txtMain"
        app:srcCompat="@drawable/schemesanalbtn" />

    <ImageButton
        android:id="@+id/imgbtnSplitComp"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/split"
        android:onClick="seperacionComplementaria"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgbtnMonochrom"
        app:srcCompat="@drawable/schemessplitbtn"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/imgbtnTriad"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="61dp"
        android:contentDescription="@string/triad"
        android:onClick="triada"
        app:layout_constraintEnd_toStartOf="@+id/imgbtnCuad"
        app:layout_constraintStart_toEndOf="@+id/imgbtnSplitComp"
        app:layout_constraintTop_toBottomOf="@+id/imgbtnAnalog"
        app:srcCompat="@drawable/schemestriabtn"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/imgbtnCuad"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/cuad"
        android:onClick="cuadrado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgbtnComp"
        app:srcCompat="@drawable/schemescuadbtn" />

    <ImageButton
        android:id="@+id/imgbtnComp"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/comp"
        android:onClick="complementario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMain"
        app:srcCompat="@drawable/schemescompbtn"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/txtMini1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/hex"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgbtnSplitComp" />

    <TextView
        android:id="@+id/txtMini3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/hex"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/txtMini2"
        app:layout_constraintTop_toBottomOf="@+id/imgbtnTriad" />

    <TextView
        android:id="@+id/txtMini2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/hex"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/txtMini1"
        app:layout_constraintTop_toBottomOf="@+id/imgbtnTriad" />

    <TextView
        android:id="@+id/txtMini4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:text="@string/hex"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/txtMini3"
        app:layout_constraintTop_toBottomOf="@+id/imgbtnCuad" />

</androidx.constraintlayout.widget.ConstraintLayout>